styles/partials/_hero.scss
.hero {
  height: 100vh;
  min-height: 100vh;
  width: 100%;
  position: relative;

  &.small-hero {
    height: 50vh;
    min-height: 50vh;
    .inner {
      height: 100%;
      display: flex;
      align-items: center;
    }
    .title-line {
      display: flex;
      justify-content: space-between;
      align-items: center;
      width: 100%;
      margin-top: 3rem;
      h2 {
        margin: 0;
      }
      .line-decor {
        width: 60%;
        img {
          -o-object-fit: scale-down;
          object-fit: scale-down;
        }
      }
    }
  }

  @include touch {
    height: 55vh;
    min-height: 50vh;
  }
  &.registration {
    @include touch {
      height: 100vh;
      min-height: 100vh;
    }
  }
}

